--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title> Single Page Application</title>
+    <link rel="stylesheet" type="text/css" href="/asset/css/bootstrap.min.css"/>
+    <link ref="stylesheet" type="text/css" href="/asset/css/bootstrap-theme.min.css"/>
   </head>
   <body>
     <h1>This is a first page of SPA..</h1>
     <div ng-controller="MyFirstController">
       {{sayHello()}}
+      <input type="text" ng-model="name" ng-blur="upper();"/>
+      {{name}}
     </div>
+    <div ng-controller="NameCalculator">
+        <input type="text" ng-model="name" ng-keyup="displayNumeric();">
+        Total Numeric value of person's name is : {{totalValue}}
+    </div>
+    <scipt type="text/javascript" src="/asset/lib/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="/asset/lib/angular.min.js"></script>
+    <script type="text/javascript" src="/asset/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="/asset/js/app.js"></script>
   </body>
 </html>
