--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title> Single Page Application</title>
-    <link rel="stylesheet" type="text/css" href="/asset/css/bootstrap.min.css"/>
-    <link ref="stylesheet" type="text/css" href="/asset/css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" type="text/css" href="asset/css/bootstrap.min.css"/>
+    <link ref="stylesheet" type="text/css" href="asset/css/bootstrap-theme.min.css"/>
   </head>
   <body>
     <h1>This is a first page of SPA..</h1>
@@ -17,9 +17,9 @@
         <input type="text" ng-model="name" ng-keyup="displayNumeric();">
         Total Numeric value of person's name is : {{totalValue}}
     </div>
-    <scipt type="text/javascript" src="/asset/lib/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="/asset/lib/angular.min.js"></script>
-    <script type="text/javascript" src="/asset/lib/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/asset/js/app.js"></script>
+    <scipt type="text/javascript" src="asset/lib/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="asset/lib/bootstrap.min.js"></script>
+    <script type="text/javascript" src="asset/lib/angular.min.js"></script>
+    <script type="text/javascript" src="asset/js/app.js"></script>
   </body>
 </html>
